[project]
name = "rustoken"  
version = "0.1.1"
description = "JWT library implemented in Rust for Python"
authors = [
    { name = "Ehsan Amiri", email = "ehsan.amiri.prog@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
readme-content-type = "text/markdown"

[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project-urls]
Repository = "https://github.com/ehs22n/rustoken.git"

