[project]
name = "rustoken"  
version = "0.1.4"
description = "JWT library implemented in Rust for Python"
authors = [
    { name = "Ehsan Amiri", email = "ehsan.amiri.prog@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
readme-content-type = "text/markdown"
repository = "https://github.com/ehs22n/rustoken"
homepage = "https://ehs22n.github.io/rustoken/"


[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project.urls]
Homepage = "https://ehs22n.github.io/rustoken/"
Repository = "https://github.com/ehs22n/rustoken"
Documentation = "https://ehs22n.github.io/rustoken/"
Issues = "https://github.com/ehs22n/rustoken/issues"


[profile.release]
strip = "symbols"
opt-level = 3